# Fraudstruct-Library

./: README.md  __init__.py  pyproject.toml  requirements.txt
audit/: reports.py
batch/: run.py
core/: baselines.py  engine.py  scoring.py  statistics.py  windows.py
detect/: behavior.py  drift.py  integrity.py  structuring.py
engines/: pandas.py  spark.py
evaluate/: blindspots.py  degradation.py  robustness.py
io/: export.py
simulate/: camouflage.py  label_poisoning.py  splitting.py  trust_building.py
stream/: detectors.py  engine.py  run.py
train/: adversarial.py
utils/: time.py  validation.py
